use {{multitrans}} to reduce memory <island#67226586>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -70,361 +70,363 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 
 ====Translations====
 {{trans-top|area of land completely surrounded by water}}
-* Abkhaz: {{t|ab|адгьылбжьаха}}
-* Acehnese: {{t|ace|pulo}}
-* Adyghe: {{t|ady|хыгъэхъун}}, {{t|ady|псыгу}}
-* Afrikaans: {{t+|af|eiland}}
-* Ainu: {{t|ain|モシㇼ|tr=mosir}}
-* Aklanon: {{t|akl|pueo'}}
-* Albanian: {{t+|sq|ishull|m}}, {{t+|sq|ujdhesë|f}}, {{t+|sq|cekë|f}}, {{t|sq|ansujë|f}}
-* Amharic: {{t|am|ደሴት|f|sc=Ethi}}
-* Antillean Creole: {{t|gcf|zil}}
-* Arabic: {{t|ar|جَزِيرَة|f}}
-*: Egyptian Arabic: {{t|arz|جزيرة|f|tr=gezīra|sc=Arab}}
-* Aragonese: {{t|an|isla|f}}
+{{multitrans|data=
+* Abkhaz: {{tt|ab|адгьылбжьаха}}
+* Acehnese: {{tt|ace|pulo}}
+* Adyghe: {{tt|ady|хыгъэхъун}}, {{tt|ady|псыгу}}
+* Afrikaans: {{tt+|af|eiland}}
+* Ainu: {{tt|ain|モシㇼ|tr=mosir}}
+* Aklanon: {{tt|akl|pueo'}}
+* Albanian: {{tt+|sq|ishull|m}}, {{tt+|sq|ujdhesë|f}}, {{tt+|sq|cekë|f}}, {{tt|sq|ansujë|f}}
+* Amharic: {{tt|am|ደሴት|f|sc=Ethi}}
+* Antillean Creole: {{tt|gcf|zil}}
+* Arabic: {{tt|ar|جَزِيرَة|f}}
+*: Egyptian Arabic: {{tt|arz|جزيرة|f|tr=gezīra|sc=Arab}}
+* Aragonese: {{tt|an|isla|f}}
 * Aramaic:
-*: Syriac: {{t|arc|ܓܙܪܬܐ|f|tr=gāzartā’|sc=Syrc}}
-* Armenian: {{t+|hy|կղզի}}
-* Assamese: {{t|as|দ্বীপ}}
-* Asturian: {{t+|ast|islla|f}}
-* Aymara: {{t|ay|wat’a}}
-* Azerbaijani: {{t+|az|ada}}
-* Baba Malay: {{t|mbf|pulo}}
-* Baekje: {{t|pkc|斯麻|tr=*syema or *sjema}}, {{t|pkc|セマ|tr=*syema or *sjema}}
-* Balinese: {{t|ban|pulo}}, {{t|ban|nusa}}
-* Bashkir: {{t|ba|утрау}}
-* Basque: {{t+|eu|irla}}, {{t+|eu|uharte}}
-* Bats: {{t|bbl|გუბ}}, {{t|bbl|კუნძულ}}
-* Belarusian: {{t|be|во́страў|m}}, {{t|be|вы́спа|f}}
-* Bengali: {{t|bn|দ্বীপ|sc=Beng|tr=dip}}, {{t|bn|জিঞ্জিরা|tr=jinjira}}
-* Bhojpuri: {{t|bho|द्वीप}}
-* Bislama: {{t|bi|aelan}}
-* Breton: {{t+|br|enez|f}}
-* Brunei Malay: {{t|kxd|pulau}}
-* Bulgarian: {{t+|bg|о́стров|m}}
-* Burmese: {{t+|my|ကျွန်း}}
-* Buryat: {{t|bua|арал}}
-* Catalan: {{t+|ca|illa|f}}
-* Cebuano: {{t|ceb|pulo}}
-* Central Dusun: {{t|dtp|pulou}}
-* Central Melanau: {{t|mel|pulau}}
-* Chamicuro: {{t|ccc|yishla}}
-* Chechen: {{t|ce|гӏайре}}
-* Cherokee: {{t|chr|ᎠᎽᏰᎵ|sc=Cher}}
-* Chichewa: {{t|ny|chilumba}}
+*: Syriac: {{tt|arc|ܓܙܪܬܐ|f|tr=gāzartā’|sc=Syrc}}
+* Armenian: {{tt+|hy|կղզի}}
+* Assamese: {{tt|as|দ্বীপ}}
+* Asturian: {{tt+|ast|islla|f}}
+* Aymara: {{tt|ay|wat’a}}
+* Azerbaijani: {{tt+|az|ada}}
+* Baba Malay: {{tt|mbf|pulo}}
+* Baekje: {{tt|pkc|斯麻|tr=*syema or *sjema}}, {{tt|pkc|セマ|tr=*syema or *sjema}}
+* Balinese: {{tt|ban|pulo}}, {{tt|ban|nusa}}
+* Bashkir: {{tt|ba|утрау}}
+* Basque: {{tt+|eu|irla}}, {{tt+|eu|uharte}}
+* Bats: {{tt|bbl|გუბ}}, {{tt|bbl|კუნძულ}}
+* Belarusian: {{tt|be|во́страў|m}}, {{tt|be|вы́спа|f}}
+* Bengali: {{tt|bn|দ্বীপ|sc=Beng|tr=dip}}, {{tt|bn|জিঞ্জিরা|tr=jinjira}}
+* Bhojpuri: {{tt|bho|द्वीप}}
+* Bislama: {{tt|bi|aelan}}
+* Breton: {{tt+|br|enez|f}}
+* Brunei Malay: {{tt|kxd|pulau}}
+* Bulgarian: {{tt+|bg|о́стров|m}}
+* Burmese: {{tt+|my|ကျွန်း}}
+* Buryat: {{tt|bua|арал}}
+* Catalan: {{tt+|ca|illa|f}}
+* Cebuano: {{tt|ceb|pulo}}
+* Central Dusun: {{tt|dtp|pulou}}
+* Central Melanau: {{tt|mel|pulau}}
+* Chamicuro: {{tt|ccc|yishla}}
+* Chechen: {{tt|ce|гӏайре}}
+* Cherokee: {{tt|chr|ᎠᎽᏰᎵ|sc=Cher}}
+* Chichewa: {{tt|ny|chilumba}}
 * Chinese:
-*: Cantonese: {{t|yue|島}}, {{t+|yue|岛|tr=dou2|sc=Hani}}, {{t|yue|島嶼}}, {{t|yue|岛屿|tr=dou2 zeoi6}}, {{t|yue|海島}}, {{t|yue|海岛|tr=hoi2 dou2}}
-*: Dungan: {{t|dng|до}}, {{t|dng|хэдо}}
-*: Gan: {{t|gan|島}}, {{t|gan|岛|tr=dau3}}
-*: Hakka: {{t|hak|島|sc=Hani}}, {{t|hak|岛|tr=táu|sc=Hani}}
-*: Jin: {{t|cjy|島}}, {{t|cjy|岛|tr=dau2}}
-*: Mandarin: {{t+|cmn|島|sc=Hani}}, {{t+|cmn|岛|tr=dǎo|sc=Hani}}, {{t+|cmn|島嶼|sc=Hani}}, {{t+|cmn|岛屿|tr=dǎoyǔ|sc=Hani}}, {{t+|cmn|海島}}, {{t+|cmn|海岛|tr=hǎidǎo}}
-*: Min Bei: {{t|mnp|島}}, {{t|mnp|岛|tr=dǒ̤}}
-*: Min Dong: {{t|cdo|島|sc=Hani}}, {{t|cdo|岛|tr=dō̤|sc=Hani}}
-*: Min Nan: {{t+|nan|島嶼|sc=Hani}}, {{t|nan|岛屿|tr=tó-sū, tó͘-sū|sc=Hani}}, {{t|nan|島|sc=Hani}}, {{t|nan|岛|tr=tó, tó͘|sc=Hani}}, {{t+|nan|海島}}, {{t|nan|海岛|tr=hái-tó͘ / hái-tó}}
-*: Wu: {{t|wuu|島|sc=Hani}}, {{t|wuu|岛|tr=tau|sc=Hani}}, {{t|wuu|島嶼}}, {{t|wuu|岛屿|tr=tau hhy}}
-*: Xiang: {{t|hsn|島}}, {{t|hsn|岛|tr=dau3}}
-* Chukchi: {{t|ckt|иԓир|tr=iḷir}}
-* Chuvash: {{t|cv|утрав}}
+*: Cantonese: {{tt|yue|島}}, {{tt+|yue|岛|tr=dou2|sc=Hani}}, {{tt|yue|島嶼}}, {{tt|yue|岛屿|tr=dou2 zeoi6}}, {{tt|yue|海島}}, {{tt|yue|海岛|tr=hoi2 dou2}}
+*: Dungan: {{tt|dng|до}}, {{tt|dng|хэдо}}
+*: Gan: {{tt|gan|島}}, {{tt|gan|岛|tr=dau3}}
+*: Hakka: {{tt|hak|島|sc=Hani}}, {{tt|hak|岛|tr=táu|sc=Hani}}
+*: Jin: {{tt|cjy|島}}, {{tt|cjy|岛|tr=dau2}}
+*: Mandarin: {{tt+|cmn|島|sc=Hani}}, {{tt+|cmn|岛|tr=dǎo|sc=Hani}}, {{tt+|cmn|島嶼|sc=Hani}}, {{tt+|cmn|岛屿|tr=dǎoyǔ|sc=Hani}}, {{tt+|cmn|海島}}, {{tt+|cmn|海岛|tr=hǎidǎo}}
+*: Min Bei: {{tt|mnp|島}}, {{tt|mnp|岛|tr=dǒ̤}}
+*: Min Dong: {{tt|cdo|島|sc=Hani}}, {{tt|cdo|岛|tr=dō̤|sc=Hani}}
+*: Min Nan: {{tt+|nan|島嶼|sc=Hani}}, {{tt|nan|岛屿|tr=tó-sū, tó͘-sū|sc=Hani}}, {{tt|nan|島|sc=Hani}}, {{tt|nan|岛|tr=tó, tó͘|sc=Hani}}, {{tt+|nan|海島}}, {{tt|nan|海岛|tr=hái-tó͘ / hái-tó}}
+*: Wu: {{tt|wuu|島|sc=Hani}}, {{tt|wuu|岛|tr=tau|sc=Hani}}, {{tt|wuu|島嶼}}, {{tt|wuu|岛屿|tr=tau hhy}}
+*: Xiang: {{tt|hsn|島}}, {{tt|hsn|岛|tr=dau3}}
+* Chukchi: {{tt|ckt|иԓир|tr=iḷir}}
+* Chuvash: {{tt|cv|утрав}}
 * Coptic:
-*: Bohairic: {{t|cop|ⲙⲟⲩⲓ|f}}, {{t|cop|ⲛⲏⲥⲟⲥ|f}}
-*: Sahidic: {{t|cop|ⲙⲟⲩⲉ|f}}, {{t|cop|ⲛⲏⲥⲟⲥ|f}}
-* Cornish: {{t|kw|enys}}
-* Corsican: {{t+|co|isula|f}}
-* Cree: {{t|cr|ᒥᓂᔥᑎᒄ}}
-* Crimean Tatar: {{t|crh|ada}}
-* Czech: {{t+|cs|ostrov|m}}
-* Danish: {{t+|da|ø|c}}, {{qualifier|of sand}} {{t+|da|holm|c}}, {{qualifier|of rock}} {{t|da|skær|c}}
-* Dhivehi: {{t|dv|ޖަޒާ|sc=Thaa}}
-* Dogrib: {{t|dgr|dı}}
-* Dutch: {{t+|nl|eiland|n}}
-* Early Modern Korean: {{t|ko-ear|셤|tr=syem}}
+*: Bohairic: {{tt|cop|ⲙⲟⲩⲓ|f}}, {{tt|cop|ⲛⲏⲥⲟⲥ|f}}
+*: Sahidic: {{tt|cop|ⲙⲟⲩⲉ|f}}, {{tt|cop|ⲛⲏⲥⲟⲥ|f}}
+* Cornish: {{tt|kw|enys}}
+* Corsican: {{tt+|co|isula|f}}
+* Cree: {{tt|cr|ᒥᓂᔥᑎᒄ}}
+* Crimean Tatar: {{tt|crh|ada}}
+* Czech: {{tt+|cs|ostrov|m}}
+* Danish: {{tt+|da|ø|c}}, {{qualifier|of sand}} {{tt+|da|holm|c}}, {{qualifier|of rock}} {{tt|da|skær|c}}
+* Dhivehi: {{tt|dv|ޖަޒާ|sc=Thaa}}
+* Dogrib: {{tt|dgr|dı}}
+* Dutch: {{tt+|nl|eiland|n}}
+* Early Modern Korean: {{tt|ko-ear|셤|tr=syem}}
 * Egyptian: {{t-egy|jw|m|h=N18:N23*Z1}}, {{t-egy|mꜣwt|f|h=mA-A-W:t-N23:Z1}}
-* Elfdalian: {{t|ovd|ö|m}}
-* Emilian: {{t|egl|îsla|f}}
-* Esperanto: {{t+|eo|insulo}}
-* Estonian: {{t+|et|saar}}
-* Even: {{t|eve|букчан}}
-* Ewe: {{t|ee|ƒukpo}}
+* Elfdalian: {{tt|ovd|ö|m}}
+* Emilian: {{tt|egl|îsla|f}}
+* Esperanto: {{tt+|eo|insulo}}
+* Estonian: {{tt+|et|saar}}
+* Even: {{tt|eve|букчан}}
+* Ewe: {{tt|ee|ƒukpo}}
 * Extremaduran: {{t-needed|ext}}
-* Faroese: {{t+|fo|oyggj|f}}, {{qualifier|small island, or river-island}} {{t|fo|hólmur|m}}
-* Fijian: {{t+|fj|yanuyanu}}
-* Finnish: {{t+|fi|saari}}
-* French: {{t+|fr|île|f}}, {{t+|fr|ile|f}} {{qualifier|alternative spelling}}
-*: Old French: {{t|fro|isle|f}}
-* Friulian: {{t|fur|isule|f}}, {{t|fur|ìsule|f}}
-* Galician: {{t+|gl|illa|f}}, {{t+|gl|insua|f}}, {{t|gl|ieste|m}}
-* Georgian: {{t|ka|კუნძული}}
-* German: {{t+|de|Insel|f}}, {{qualifier|poetic}} {{t+|de|Eiland|n}}
-*: Alemannic German: {{t|gsw|Insle|f}}
-*: Bavarian: {{t|bar|Insl|f}}
-* Greek: {{qualifier|formal}} {{t+|el|νήσος|f}}, {{t+|el|νησί|n}}
-*: Ancient: {{t|grc|νῆσος|f}}
-* Greenlandic: {{t|kl|qeqertaq}}
-* Guaraní: {{t|gn|ypa'ũ}}
-* Gujarati: {{t|gu|દ્વીપ|m}}, {{t+|gu|ટાપુ}}
-* Haitian Creole: {{t|ht|zile}}, {{t|ht|zil}}
-* Hausa: {{t+|ha|tsibiri}}
-* Hawaiian: {{t|haw|moku}}
-* Hebrew: {{t+|he|אִי|m|tr=i}}
-* Hindi: {{t+|hi|द्वीप|m|sc=Deva}}, {{t+|hi|टापू|m|sc=Deva}}, {{t|hi|जज़ीरा|m}} {{qualifier|poetic}}, {{t|hi|उपद्वीप}}
-* Hungarian: {{t+|hu|sziget}}
-* Hunsrik: {{t|hrx|Insel|f}}
-* Icelandic: {{t+|is|ey|f}}, {{t+|is|eyja}}, {{t|is|eyland|n}}
-* Ido: {{t+|io|insulo}}
-* Igbo: {{t|ig|àgwè}}, {{t|ig|àgwà}}
-* Ilocano: {{t|ilo|puro}}
-* Indonesian: {{t+|id|pulau}}, {{t|id|nusa}}
-* Interlingua: {{t|ia|insula}}
-* Iranun: {{t|ill|pulu}}
-* Irish: {{t+|ga|oileán|m}}, {{t|ga|inis|f}}
-* Isnag: {{t|isd|puxo}}
-* Italian: {{t+|it|isola|f}}
-* Japanese: {{t+|ja|島|tr=しま, shima}}
-* Javanese: {{t|jv|pulo}}
-* Jeju: {{t|jje|섬}}
-* Kabuverdianu: {{t|kea|ilha}}
-* Kalmyk: {{t|xal|арл|sc=Cyrl}}
-* Kannada: {{t+|kn|ದ್ವೀಪ|sc=Knda}}
-* Karachay-Balkar: {{t|krc|айрымкан|tr=ayrımkan|sc=Cyrl}}, {{qualifier|Balkar}} {{t|krc|айрыкам|tr=ayrıkam|sc=Cyrl}}
-* Kashubian: {{t|csb|òstrow|m}}
-* Kazakh: {{t+|kk|арал|sc=Cyrl}}, {{t|kk|атау|sc=Cyrl}}
-* Khakas: {{t|kjh|олтырых}}
-* Khmer: {{t+|km|កោះ}}
-* Komi-Permyak: {{t|koi|ди}}
-* Komi-Zyrian: {{t|kpv|ді}}
-* Korean: {{t+|ko|섬}}, {{t+|ko|도(島)}} {{qualifier|as a component}}
-* Kumyk: {{t|kum|атав|tr=ataw|sc=Cyrl}}
-* Kuna: {{t|cuk|dupu}}
-* Kunigami: {{t|xug|島|tr=しまー, shimā}}
+* Faroese: {{tt+|fo|oyggj|f}}, {{qualifier|small island, or river-island}} {{tt|fo|hólmur|m}}
+* Fijian: {{tt+|fj|yanuyanu}}
+* Finnish: {{tt+|fi|saari}}
+* French: {{tt+|fr|île|f}}, {{tt+|fr|ile|f}} {{qualifier|alternative spelling}}
+*: Old French: {{tt|fro|isle|f}}
+* Friulian: {{tt|fur|isule|f}}, {{tt|fur|ìsule|f}}
+* Galician: {{tt+|gl|illa|f}}, {{tt+|gl|insua|f}}, {{tt|gl|ieste|m}}
+* Georgian: {{tt|ka|კუნძული}}
+* German: {{tt+|de|Insel|f}}, {{qualifier|poetic}} {{tt+|de|Eiland|n}}
+*: Alemannic German: {{tt|gsw|Insle|f}}
+*: Bavarian: {{tt|bar|Insl|f}}
+* Greek: {{qualifier|formal}} {{tt+|el|νήσος|f}}, {{tt+|el|νησί|n}}
+*: Ancient: {{tt|grc|νῆσος|f}}
+* Greenlandic: {{tt|kl|qeqertaq}}
+* Guaraní: {{tt|gn|ypa'ũ}}
+* Gujarati: {{tt|gu|દ્વીપ|m}}, {{tt+|gu|ટાપુ}}
+* Haitian Creole: {{tt|ht|zile}}, {{tt|ht|zil}}
+* Hausa: {{tt+|ha|tsibiri}}
+* Hawaiian: {{tt|haw|moku}}
+* Hebrew: {{tt+|he|אִי|m|tr=i}}
+* Hindi: {{tt+|hi|द्वीप|m|sc=Deva}}, {{tt+|hi|टापू|m|sc=Deva}}, {{tt|hi|जज़ीरा|m}} {{qualifier|poetic}}, {{tt|hi|उपद्वीप}}
+* Hungarian: {{tt+|hu|sziget}}
+* Hunsrik: {{tt|hrx|Insel|f}}
+* Icelandic: {{tt+|is|ey|f}}, {{tt+|is|eyja}}, {{tt|is|eyland|n}}
+* Ido: {{tt+|io|insulo}}
+* Igbo: {{tt|ig|àgwè}}, {{tt|ig|àgwà}}
+* Ilocano: {{tt|ilo|puro}}
+* Indonesian: {{tt+|id|pulau}}, {{tt|id|nusa}}
+* Interlingua: {{tt|ia|insula}}
+* Iranun: {{tt|ill|pulu}}
+* Irish: {{tt+|ga|oileán|m}}, {{tt|ga|inis|f}}
+* Isnag: {{tt|isd|puxo}}
+* Italian: {{tt+|it|isola|f}}
+* Japanese: {{tt+|ja|島|tr=しま, shima}}
+* Javanese: {{tt|jv|pulo}}
+* Jeju: {{tt|jje|섬}}
+* Kabuverdianu: {{tt|kea|ilha}}
+* Kalmyk: {{tt|xal|арл|sc=Cyrl}}
+* Kannada: {{tt+|kn|ದ್ವೀಪ|sc=Knda}}
+* Karachay-Balkar: {{tt|krc|айрымкан|tr=ayrımkan|sc=Cyrl}}, {{qualifier|Balkar}} {{tt|krc|айрыкам|tr=ayrıkam|sc=Cyrl}}
+* Kashubian: {{tt|csb|òstrow|m}}
+* Kazakh: {{tt+|kk|арал|sc=Cyrl}}, {{tt|kk|атау|sc=Cyrl}}
+* Khakas: {{tt|kjh|олтырых}}
+* Khmer: {{tt+|km|កោះ}}
+* Komi-Permyak: {{tt|koi|ди}}
+* Komi-Zyrian: {{tt|kpv|ді}}
+* Korean: {{tt+|ko|섬}}, {{tt+|ko|도(島)}} {{qualifier|as a component}}
+* Kumyk: {{tt|kum|атав|tr=ataw|sc=Cyrl}}
+* Kuna: {{tt|cuk|dupu}}
+* Kunigami: {{tt|xug|島|tr=しまー, shimā}}
 * Kurdish:
-*: Central Kurdish: {{t+|ckb|گراڤ|f}}
-*: Northern Kurdish: {{t+|kmr|girav|f}}
-* Kyrgyz: {{t+|ky|арал}}
+*: Central Kurdish: {{tt+|ckb|گراڤ|f}}
+*: Northern Kurdish: {{tt+|kmr|girav|f}}
+* Kyrgyz: {{tt+|ky|арал}}
 * Ladin: {{t-needed|lld}}
-* Ladino: {{t|lad|adá|f}}, {{t|lad|isola|f}}, {{t|lad|izla|f}}
-* Lakota: {{t|lkt|wíta}}
-* Lao: {{t|lo|ດອນ}}, {{t+|lo|ເກາະ}}
-* Latgalian: {{qualifier|ocean, sea}} {{t|ltg|jiursola}}, {{qualifier|lake}} {{t|ltg|azarsola}}, {{qualifier|river}} {{t|ltg|upsola}}
-* Latin: {{t+|la|insula|f}}
-* Latvian: {{t+|lv|sala|f}}
-* Laz: {{t|lzz|ადა}}
-* Lingala: {{t|ln|esanga|c7|c8}}
-* Lithuanian: {{t+|lt|sala|f}}
-* Livonian: {{t|liv|sǭr}}
-* Livvi: {{t|olo|suari}}
-* Lombard: {{t|lmo|isula|f}}
-* Low German: {{t|nds|Insel|f}}, {{t|nds|Ailand|n}}
-*: Dutch Low Saxon: {{t+|nds-nl|eilaand|n}}
-* Ludian: {{t|lud|suar'}}
-* Luganda: {{t|lg|ekizinga}}
-* Luxembourgish: {{t|lb|Insel|f}}
-* Lü: {{t|khb|ᦓᧄᧉᦂᦸᦰ}}, {{t|khb|ᦂᦸᦰ}}, {{t|khb|ᦂᦸᦰᦡᦸᧃ}}
+* Ladino: {{tt|lad|adá|f}}, {{tt|lad|isola|f}}, {{tt|lad|izla|f}}
+* Lakota: {{tt|lkt|wíta}}
+* Lao: {{tt|lo|ດອນ}}, {{tt+|lo|ເກາະ}}
+* Latgalian: {{qualifier|ocean, sea}} {{tt|ltg|jiursola}}, {{qualifier|lake}} {{tt|ltg|azarsola}}, {{qualifier|river}} {{tt|ltg|upsola}}
+* Latin: {{tt+|la|insula|f}}
+* Latvian: {{tt+|lv|sala|f}}
+* Laz: {{tt|lzz|ადა}}
+* Lingala: {{tt|ln|esanga|c7|c8}}
+* Lithuanian: {{tt+|lt|sala|f}}
+* Livonian: {{tt|liv|sǭr}}
+* Livvi: {{tt|olo|suari}}
+* Lombard: {{tt|lmo|isula|f}}
+* Low German: {{tt|nds|Insel|f}}, {{tt|nds|Ailand|n}}
+*: Dutch Low Saxon: {{tt+|nds-nl|eilaand|n}}
+* Ludian: {{tt|lud|suar'}}
+* Luganda: {{tt|lg|ekizinga}}
+* Luxembourgish: {{tt|lb|Insel|f}}
+* Lü: {{tt|khb|ᦓᧄᧉᦂᦸᦰ}}, {{tt|khb|ᦂᦸᦰ}}, {{tt|khb|ᦂᦸᦰᦡᦸᧃ}}
 {{trans-mid}}
-* Macedonian: {{t|mk|остров|m}}
-* Malagasy: {{t+|mg|nosy}}
-* Malay: {{t+|ms|pulau}}, {{t|ms|nusa}}
-*: Jawi: {{t|ms|ڤولاو}}, {{t|ms|نوسا}}
-* Malayalam: {{t+|ml|ദ്വീപ്}}
-* Maltese: {{t+|mt|gżira|f}}, {{t|mt|ġzira|f}}
-* Manchu: {{t|mnc|ᡨᡠᠨ}}
-* Mansaka: {{t|msk|poro}}
-* Manx: {{t|gv|ellan|m|f}}, {{t|gv|innis|f}}, {{t|gv|innys|f}}, {{t|gv|insh|f}}
-* Maori: {{t|mi|motu}}
-* Mapudungun: {{t|arn|wapi}}
-* Maranao: {{t|mrw|polo}}, {{t|mrw|molopolo}}
-* Marathi: {{t|mr|बेट|sc=Deva}}
+* Macedonian: {{tt|mk|остров|m}}
+* Malagasy: {{tt+|mg|nosy}}
+* Malay: {{tt+|ms|pulau}}, {{tt|ms|nusa}}
+*: Jawi: {{tt|ms|ڤولاو}}, {{tt|ms|نوسا}}
+* Malayalam: {{tt+|ml|ദ്വീപ്}}
+* Maltese: {{tt+|mt|gżira|f}}, {{tt|mt|ġzira|f}}
+* Manchu: {{tt|mnc|ᡨᡠᠨ}}
+* Mansaka: {{tt|msk|poro}}
+* Manx: {{tt|gv|ellan|m|f}}, {{tt|gv|innis|f}}, {{tt|gv|innys|f}}, {{tt|gv|insh|f}}
+* Maori: {{tt|mi|motu}}
+* Mapudungun: {{tt|arn|wapi}}
+* Maranao: {{tt|mrw|polo}}, {{tt|mrw|molopolo}}
+* Marathi: {{tt|mr|बेट|sc=Deva}}
 * Mari:
-*: Eastern Mari: {{t|chm|отро}}
-*: Western Mari: {{t|mrj|ошмаоты}}
-* Middle Korean: {{t|okm|셤〯|tr=syěm}}
-* Mingrelian: {{t|xmf|კოკი}}
-* Mirandese: {{t|mwl|ilha|f}}
-* Miyako: {{t|mvi|島|tr=すま, suma}}
-* Mizo: {{t|lus|thliarkar}}
-* Moksha: {{t|mdf|цёнга}}
+*: Eastern Mari: {{tt|chm|отро}}
+*: Western Mari: {{tt|mrj|ошмаоты}}
+* Middle Korean: {{tt|okm|셤〯|tr=syěm}}
+* Mingrelian: {{tt|xmf|კოკი}}
+* Mirandese: {{tt|mwl|ilha|f}}
+* Miyako: {{tt|mvi|島|tr=すま, suma}}
+* Mizo: {{tt|lus|thliarkar}}
+* Moksha: {{tt|mdf|цёнга}}
 * Mongolian:
-*: Cyrillic: {{t+|mn|арал}}
-*: Uyghurjin: {{t|mn|ᠠᠷᠠᠯ}}
-* Mwani: {{t|wmw|kisirwa}}
-* Nahuatl: {{t|nah|tlālhuāctli}}
-* Nanai: {{t|gld|боачан}}
-* Nepali: {{t|ne|द्वीप|m}}, {{t|ne|टापू}}
-* Ngazidja Comorian: {{t|zdj|siwa|c5|c6}}
-* Niuean: {{t|niu|motu}}
-* Nivkh: {{t|niv|ур̌}}
-* Norman: {{t|nrf|île|f}}
+*: Cyrillic: {{tt+|mn|арал}}
+*: Uyghurjin: {{tt|mn|ᠠᠷᠠᠯ}}
+* Mwani: {{tt|wmw|kisirwa}}
+* Nahuatl: {{tt|nah|tlālhuāctli}}
+* Nanai: {{tt|gld|боачан}}
+* Nepali: {{tt|ne|द्वीप|m}}, {{tt|ne|टापू}}
+* Ngazidja Comorian: {{tt|zdj|siwa|c5|c6}}
+* Niuean: {{tt|niu|motu}}
+* Nivkh: {{tt|niv|ур̌}}
+* Norman: {{tt|nrf|île|f}}
 * North Frisian:
-*: Föhr-Amrum: {{t|frr|eilun|n}}
-*: Helgoland: {{t|frr|Ailun|n}}, {{t|frr|Eelun|n}}
-*: Mooring: {{t|frr|ailönj|n}}
-*: Sylt: {{t|frr|Ailön|n}}
-* Northern Sami: {{t|se|suolu}}
-* Northern Sotho: {{t|nso|sehlakehlake}}
+*: Föhr-Amrum: {{tt|frr|eilun|n}}
+*: Helgoland: {{tt|frr|Ailun|n}}, {{tt|frr|Eelun|n}}
+*: Mooring: {{tt|frr|ailönj|n}}
+*: Sylt: {{tt|frr|Ailön|n}}
+* Northern Sami: {{tt|se|suolu}}
+* Northern Sotho: {{tt|nso|sehlakehlake}}
 * Northern Thai: {{t-needed|nod}}
 * Norwegian:
-*: Bokmål: {{t+|nb|øy|m|f}}
-*: Nynorsk: {{t|nn|øy|f}}
-* Nottoway-Meherrin: {{t|nwy|eohtessieh}}
-* Occitan: {{t+|oc|illa|f}}, {{t+|oc|iscla|f}}
-* Ojibwe: {{t|oj|minis}}
-* Okinawan: {{t|ryu|島|tr=しま, shima}}
+*: Bokmål: {{tt+|nb|øy|m|f}}
+*: Nynorsk: {{tt|nn|øy|f}}
+* Nottoway-Meherrin: {{tt|nwy|eohtessieh}}
+* Occitan: {{tt+|oc|illa|f}}, {{tt+|oc|iscla|f}}
+* Ojibwe: {{tt|oj|minis}}
+* Okinawan: {{tt|ryu|島|tr=しま, shima}}
 * Old Church Slavonic:
-*: Cyrillic: {{t|cu|островъ|m}}, {{t|cu|отокъ|m}}
-* Old East Slavic: {{t|orv|островъ|m}}
-* Old English: {{t|ang|īeġland|n}}
-* Old French: {{t|fro|isle|f}}
-* Old Japanese: {{t|ojp|島|tr=しま, sima}}
-* Oriya: {{t+|or|ଟାପୁ}}, {{t|or|ଦ୍ଵୀପ}}
-* Ossetian: {{t|os|сакъадах}}
-* Ottoman Turkish: {{t|ota|جزیره|tr=cezîre}}, {{t|ota|آدا|tr=ada}}, {{t|ota|جزائر|p|tr=cezâir}}
-* Palauan: {{t|pau|iungs}}
-* Pashto: {{t+|ps|ټاپو|m|tr=ṭâpú|sc=ps-Arab}}, {{t+|ps|جزيره|f|tr=ǰazirá}}
-* Persian: {{t+|fa|جزیره|tr=jazire}}, {{t+|fa|گنگ|tr=gang}}
-* Phoenician: {{t|phn|𐤀𐤉}}
-* Pijin: {{t|pis|aelan}}
-* Pitcairn-Norfolk: {{t|pih|ailen}}
-* Plautdietsch: {{t|pdt|Insel|f}}
-* Poitevin-Saintongese: {{t|roa-poi|ilâte|f}}, {{t|roa-poi|ile|f}}
-* Polabian: {{t|pox|våstrüv|m}}
-* Polish: {{t+|pl|wyspa|f}}
-*: Old Polish: {{t|zlw-opl|ostrów|m}}
-* Portuguese: {{t+|pt|ilha|f}}
-* Punjabi: {{t+|pa|ਟਾਪੂ|m}}
-* Quechua: {{t|qu|wat'a}}
+*: Cyrillic: {{tt|cu|островъ|m}}, {{tt|cu|отокъ|m}}
+* Old East Slavic: {{tt|orv|островъ|m}}
+* Old English: {{tt|ang|īeġland|n}}
+* Old French: {{tt|fro|isle|f}}
+* Old Japanese: {{tt|ojp|島|tr=しま, sima}}
+* Oriya: {{tt+|or|ଟାପୁ}}, {{tt|or|ଦ୍ଵୀପ}}
+* Ossetian: {{tt|os|сакъадах}}
+* Ottoman Turkish: {{tt|ota|جزیره|tr=cezîre}}, {{tt|ota|آدا|tr=ada}}, {{tt|ota|جزائر|p|tr=cezâir}}
+* Palauan: {{tt|pau|iungs}}
+* Pashto: {{tt+|ps|ټاپو|m|tr=ṭâpú|sc=ps-Arab}}, {{tt+|ps|جزيره|f|tr=ǰazirá}}
+* Persian: {{tt+|fa|جزیره|tr=jazire}}, {{tt+|fa|گنگ|tr=gang}}
+* Phoenician: {{tt|phn|𐤀𐤉}}
+* Pijin: {{tt|pis|aelan}}
+* Pitcairn-Norfolk: {{tt|pih|ailen}}
+* Plautdietsch: {{tt|pdt|Insel|f}}
+* Poitevin-Saintongese: {{tt|roa-poi|ilâte|f}}, {{tt|roa-poi|ile|f}}
+* Polabian: {{tt|pox|våstrüv|m}}
+* Polish: {{tt+|pl|wyspa|f}}
+*: Old Polish: {{tt|zlw-opl|ostrów|m}}
+* Portuguese: {{tt+|pt|ilha|f}}
+* Punjabi: {{tt+|pa|ਟਾਪੂ|m}}
+* Quechua: {{tt|qu|wat'a}}
 * Rajasthani: {{t-needed|raj}}
-* Rapa Nui: {{t|rap|motu}}
-* Romani: {{t|rom|dvip|m}}
-* Romanian: {{t+|ro|insulă|f}}
-* Romansch: {{t|rm|insla|f}}
-* Russian: {{t+|ru|о́стров|m}}
-* Rusyn: {{t|rue|о́стров|m}}
-* S'gaw Karen: {{t|ksw|ကီး}}
-* Samoan: {{t+|sm|motu}}
-* Sango: {{t+|sg|zûa}}
-* Sanskrit: {{t|sa|जलवेष्टितभूमि}}
-* Sardinian: {{t|sc|isula|f}}
-* Saterland Frisian: {{t|stq|Ailound|n}}
-* Scots: {{t|sco|island}}
-* Scottish Gaelic: {{t|gd|eilean|m}}, {{t|gd|innis|f}}
+* Rapa Nui: {{tt|rap|motu}}
+* Romani: {{tt|rom|dvip|m}}
+* Romanian: {{tt+|ro|insulă|f}}
+* Romansch: {{tt|rm|insla|f}}
+* Russian: {{tt+|ru|о́стров|m}}
+* Rusyn: {{tt|rue|о́стров|m}}
+* S'gaw Karen: {{tt|ksw|ကီး}}
+* Samoan: {{tt+|sm|motu}}
+* Sango: {{tt+|sg|zûa}}
+* Sanskrit: {{tt|sa|जलवेष्टितभूमि}}
+* Sardinian: {{tt|sc|isula|f}}
+* Saterland Frisian: {{tt|stq|Ailound|n}}
+* Scots: {{tt|sco|island}}
+* Scottish Gaelic: {{tt|gd|eilean|m}}, {{tt|gd|innis|f}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|о̏стрво|n|sc=Cyrl}}, {{t|sh|о̀ток|m|sc=Cyrl}}
-*: Roman: {{t+|sh|ȍstrvo|n}}, {{t+|sh|òtok|m}}
-* Shona: {{t|sn|chitsuwa}}
-* Sicilian: {{t+|scn|ìsula|f}}
-* Sindhi: {{t|sd|ٻيٽ|m|tr=ḇetu|alt=ٻيٽُ|sc=sd-Arab}}
-* Sinhalese: {{t|si|දිවයින|sc=Sinh}}
-* Slovak: {{t+|sk|ostrov|m}}
-* Slovene: {{t+|sl|ôtok|m}}
-* Slovincian: {{t|zlw-slv|u̯ostrȯw|m}}
-* Somali: {{t+|so|jasiirad|f}}
+*: Cyrillic: {{tt|sh|о̏стрво|n|sc=Cyrl}}, {{tt|sh|о̀ток|m|sc=Cyrl}}
+*: Roman: {{tt+|sh|ȍstrvo|n}}, {{tt+|sh|òtok|m}}
+* Shona: {{tt|sn|chitsuwa}}
+* Sicilian: {{tt+|scn|ìsula|f}}
+* Sindhi: {{tt|sd|ٻيٽ|m|tr=ḇetu|alt=ٻيٽُ|sc=sd-Arab}}
+* Sinhalese: {{tt|si|දිවයින|sc=Sinh}}
+* Slovak: {{tt+|sk|ostrov|m}}
+* Slovene: {{tt+|sl|ôtok|m}}
+* Slovincian: {{tt|zlw-slv|u̯ostrȯw|m}}
+* Somali: {{tt+|so|jasiirad|f}}
 * Sorbian:
-*: Lower Sorbian: {{t|dsb|kupa|f}}, {{t|dsb|kupka|f}}
-*: Upper Sorbian: {{t|hsb|kupa|f}}
-* Sotho: {{t|st|sehlekehleke}}
-* Southern Altai: {{t|alt|ортолык}}
+*: Lower Sorbian: {{tt|dsb|kupa|f}}, {{tt|dsb|kupka|f}}
+*: Upper Sorbian: {{tt|hsb|kupa|f}}
+* Sotho: {{tt|st|sehlekehleke}}
+* Southern Altai: {{tt|alt|ортолык}}
 * Southern Thai: {{t-needed|sou}}
-* Spanish: {{t+|es|isla|f}}, {{t|es|ínsula|f}}
-* Sundanese: {{t|su|pulo}}
-* Swahili: {{t+|sw|kisiwa}}
-* Swedish: {{t+|sv|ö|c}}, {{t+|sv|holme|c}}, {{t+|sv|kobbe|c}}, {{t+|sv|skär|n}}
-* Tagalog: {{t+|tl|pulo}}
-* Tahitian: {{t|ty|motu}}
-* Tajik: {{t+|tg|ҷазира}}
-* Tamil: {{t+|ta|தீவு}}
-* Tatar: {{t+|tt|утрау}}
-* Telugu: {{t+|te|దీవి}}, {{t+|te|ద్వీపము}}
+* Spanish: {{tt+|es|isla|f}}, {{tt|es|ínsula|f}}
+* Sundanese: {{tt|su|pulo}}
+* Swahili: {{tt+|sw|kisiwa}}
+* Swedish: {{tt+|sv|ö|c}}, {{tt+|sv|holme|c}}, {{tt+|sv|kobbe|c}}, {{tt+|sv|skär|n}}
+* Tagalog: {{tt+|tl|pulo}}
+* Tahitian: {{tt|ty|motu}}
+* Tajik: {{tt+|tg|ҷазира}}
+* Tamil: {{tt+|ta|தீவு}}
+* Tatar: {{tt+|tt|утрау}}
+* Telugu: {{tt+|te|దీవి}}, {{tt+|te|ద్వీపము}}
 * Tetum: {{t-needed|tet}}
-* Thai: {{t+|th|เกาะ}}
-* Tibetan: {{t|bo|མཚོ་གླིང|sc=Tibt}}, {{t|bo|གླིང་ཕྲན|sc=Tibt}}
-* Tigrinya: {{t|ti|ደሴት|f|sc=Ethi}}
-* Tlingit: {{t|tli|x'áat'}}
-* Tocharian B: {{t|txb|prenke}}
-* Tok Pisin: {{t|tpi|ailan}}
-* Tongan: {{t|to|motu}}
-* Torres Strait Creole: {{t|tcs|ailan}}
-* Tuamotuan: {{t|pmt|motu}}
-* Turkish: {{t+|tr|ada}}, {{t+|tr|aral}}, {{t+|tr|cezire}}
-* Turkmen: {{t+|tk|ada}}
-* Tuvan: {{t|tyv|ортулук}}
-* Udmurt: {{t|udm|остров}}
-* Ukrainian: {{t+|uk|о́стрів|m}}
-* Urdu: {{t|ur|ٹاپو|m|tr=ṭāpū|sc=ur-Arab}}, {{t|ur|جزیرہ|f|tr=jazīrā}}
-* Uyghur: {{t|ug|ئارال|sc=ug-Arab}}, {{t|ug|جەزىرە}}
-* Uzbek: {{t+|uz|orol}}, {{t+|uz|jazira}}
-* Venetian: {{t|vec|ixoła|f}}
-* Veps: {{t|vep|sar'}}
-* Vietnamese: {{t+|vi|đảo}} ({{t|vi|島}}), {{t+|vi|hòn đảo}}
-* Volapük: {{t+|vo|nisul}}
-* Voro: {{t|vor|saar'}}
-* Votic: {{t|vot|saari}}
-* Walloon: {{t+|wa|iye}}
-* Waray-Waray: {{t|war|purô}}
-* Welsh: {{t+|cy|ynys|f}}
-* West Coast Bajau: {{t|bdr|pulou}}
-* West Frisian: {{t+|fy|eilân|n}}
-* Western Panjabi: {{t|pnb|ٹاپو|m|tr=ṭāpv}}
-* Wolof: {{t|wo|dun}}
-* Xhosa: {{t|xh|isiqithi|c7|c8}}
-* Yaeyama: {{t|rys|島|tr=しぃま, sïma}}
-* Yakut: {{t|sah|арыы}}
-* Yiddish: {{t|yi|אינדזל|m}}
-* Yonaguni: {{t|yoi|ダマ|tr=dama}}, {{t|yoi|島|tr=ちま, chima}}
-* Yoruba: {{t|yo|erékùṣù}}
-* Yup'ik: {{t|esu|qikertaq}}
-* Yámana: {{t|yag|yeška}}
-* Zazaki: {{t|zza|ada|f}}, {{t|zza|aleng|f}}
-* Zhuang: {{t|za|dauj}}
-* Zulu: {{t|zu|isiqhingi|c7|c8}}
+* Thai: {{tt+|th|เกาะ}}
+* Tibetan: {{tt|bo|མཚོ་གླིང|sc=Tibt}}, {{tt|bo|གླིང་ཕྲན|sc=Tibt}}
+* Tigrinya: {{tt|ti|ደሴት|f|sc=Ethi}}
+* Tlingit: {{tt|tli|x'áat'}}
+* Tocharian B: {{tt|txb|prenke}}
+* Tok Pisin: {{tt|tpi|ailan}}
+* Tongan: {{tt|to|motu}}
+* Torres Strait Creole: {{tt|tcs|ailan}}
+* Tuamotuan: {{tt|pmt|motu}}
+* Turkish: {{tt+|tr|ada}}, {{tt+|tr|aral}}, {{tt+|tr|cezire}}
+* Turkmen: {{tt+|tk|ada}}
+* Tuvan: {{tt|tyv|ортулук}}
+* Udmurt: {{tt|udm|остров}}
+* Ukrainian: {{tt+|uk|о́стрів|m}}
+* Urdu: {{tt|ur|ٹاپو|m|tr=ṭāpū|sc=ur-Arab}}, {{tt|ur|جزیرہ|f|tr=jazīrā}}
+* Uyghur: {{tt|ug|ئارال|sc=ug-Arab}}, {{tt|ug|جەزىرە}}
+* Uzbek: {{tt+|uz|orol}}, {{tt+|uz|jazira}}
+* Venetian: {{tt|vec|ixoła|f}}
+* Veps: {{tt|vep|sar'}}
+* Vietnamese: {{tt+|vi|đảo}} ({{tt|vi|島}}), {{tt+|vi|hòn đảo}}
+* Volapük: {{tt+|vo|nisul}}
+* Voro: {{tt|vor|saar'}}
+* Votic: {{tt|vot|saari}}
+* Walloon: {{tt+|wa|iye}}
+* Waray-Waray: {{tt|war|purô}}
+* Welsh: {{tt+|cy|ynys|f}}
+* West Coast Bajau: {{tt|bdr|pulou}}
+* West Frisian: {{tt+|fy|eilân|n}}
+* Western Panjabi: {{tt|pnb|ٹاپو|m|tr=ṭāpv}}
+* Wolof: {{tt|wo|dun}}
+* Xhosa: {{tt|xh|isiqithi|c7|c8}}
+* Yaeyama: {{tt|rys|島|tr=しぃま, sïma}}
+* Yakut: {{tt|sah|арыы}}
+* Yiddish: {{tt|yi|אינדזל|m}}
+* Yonaguni: {{tt|yoi|ダマ|tr=dama}}, {{tt|yoi|島|tr=ちま, chima}}
+* Yoruba: {{tt|yo|erékùṣù}}
+* Yup'ik: {{tt|esu|qikertaq}}
+* Yámana: {{tt|yag|yeška}}
+* Zazaki: {{tt|zza|ada|f}}, {{tt|zza|aleng|f}}
+* Zhuang: {{tt|za|dauj}}
+* Zulu: {{tt|zu|isiqhingi|c7|c8}}
 {{trans-bottom}}
 
 {{trans-top|entity surrounded by other entities that are very different from itself}}
-* Albanian: {{t+|sq|ishull|m}}
-* Bulgarian: {{t+|bg|остров|m}}
-* Catalan: {{t+|ca|illa|f}}
-* Czech: {{t+|cs|ostrov|m}}
-* Danish: {{t+|da|ø|c}}
-* Dutch: {{t+|nl|eiland|n}}, {{t+|nl|enclave}}
-* Estonian: {{t+|et|saar}}
-* Faroese: {{t+|fo|oyggj|f}}
-* Finnish: {{t+|fi|saareke}}
-* French: {{t+|fr|île|f}}
-* German: {{t+|de|Insel|f}}, {{t+|de|Enklave|f}}
-* Greek: {{t+|el|νησί|n}}, {{t+|el|νησίδα|f}}
-*: Ancient: {{t|grc|νῆσος|f}}
-* Hebrew: {{t+|he|אִי|tr=i|m|sc=Hebr}}
-* Hungarian: {{t+|hu|sziget}}
-* Icelandic: {{t+|is|eyja|f}}, {{t|is|eyland|n}}
-* Igbo: {{t|ig|mgbà}}
+* Albanian: {{tt+|sq|ishull|m}}
+* Bulgarian: {{tt+|bg|остров|m}}
+* Catalan: {{tt+|ca|illa|f}}
+* Czech: {{tt+|cs|ostrov|m}}
+* Danish: {{tt+|da|ø|c}}
+* Dutch: {{tt+|nl|eiland|n}}, {{tt+|nl|enclave}}
+* Estonian: {{tt+|et|saar}}
+* Faroese: {{tt+|fo|oyggj|f}}
+* Finnish: {{tt+|fi|saareke}}
+* French: {{tt+|fr|île|f}}
+* German: {{tt+|de|Insel|f}}, {{tt+|de|Enklave|f}}
+* Greek: {{tt+|el|νησί|n}}, {{tt+|el|νησίδα|f}}
+*: Ancient: {{tt|grc|νῆσος|f}}
+* Hebrew: {{tt+|he|אִי|tr=i|m|sc=Hebr}}
+* Hungarian: {{tt+|hu|sziget}}
+* Icelandic: {{tt+|is|eyja|f}}, {{tt|is|eyland|n}}
+* Igbo: {{tt|ig|mgbà}}
 * Indonesian: {{t-needed|id}}
 * Irish: {{t-needed|ga}}
-* Italian: {{t+|it|isola|f}}
+* Italian: {{tt+|it|isola|f}}
 * Ladin: {{t-needed|lld}}
 * Ladino: {{t-needed|lad}}
 {{trans-mid}}
-* Latgalian: {{qualifier|village}} {{t|ltg|sola}}
+* Latgalian: {{qualifier|village}} {{tt|ltg|sola}}
 * Latin: {{t-needed|la}}
-* Latvian: {{t+|lv|sala|f}}
-* Lithuanian: {{t+|lt|sala|f}}
-* Macedonian: {{t|mk|остров|m}}
+* Latvian: {{tt+|lv|sala|f}}
+* Lithuanian: {{tt+|lt|sala|f}}
+* Macedonian: {{tt|mk|остров|m}}
 * Maltese: {{t-needed|mt}}
 * Norwegian:
-*: Bokmål: {{t+|nb|øy|m|f}}
-*: Nynorsk: {{t|nn|øy|m}}
-* Polish: {{t+|pl|wyspa|f}}
-* Portuguese: {{t+|pt|ilha|f}}
-* Romanian: {{t+|ro|insulă|f}}
-* Russian: {{t+|ru|о́стров|m}}
-* Scots: {{t|sco|island}}
-* Slovak: {{t+|sk|ostrov|m}}
-* Slovene: {{t+|sl|otok|m}}
-* Spanish: {{t+|es|oasis|m}}
-* Swahili: {{t+|sw|kisiwa}}
-* Swedish: {{t+|sv|ö|c}}
+*: Bokmål: {{tt+|nb|øy|m|f}}
+*: Nynorsk: {{tt|nn|øy|m}}
+* Polish: {{tt+|pl|wyspa|f}}
+* Portuguese: {{tt+|pt|ilha|f}}
+* Romanian: {{tt+|ro|insulă|f}}
+* Russian: {{tt+|ru|о́стров|m}}
+* Scots: {{tt|sco|island}}
+* Slovak: {{tt+|sk|ostrov|m}}
+* Slovene: {{tt+|sl|otok|m}}
+* Spanish: {{tt+|es|oasis|m}}
+* Swahili: {{tt+|sw|kisiwa}}
+* Swedish: {{tt+|sv|ö|c}}
 * Veps: {{t-needed|vep}}
 * Volapük: {{t-needed|vo}}
 * Votic: {{t-needed|vot}}
 * Võro: {{t-needed|vro}}
+}}<!-- close {{multitrans}} -->
 {{trans-bottom}}
 
 {{checktrans-top}}
@@ -466,21 +468,22 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 
 ====Translations====
 {{trans-top|make into an island}}
-* Finnish: {{t|fi|[[tehdä]] [[saari]]}} {{qualifier|+ elative}}, {{t+|fi|saartaa}}
-* German: {{t+|de|einschließen}}, {{t+|de|umströmen}}
+{{multitrans|data=
+* Finnish: {{tt|fi|[[tehdä]] [[saari]]}} {{qualifier|+ elative}}, {{tt+|fi|saartaa}}
+* German: {{tt+|de|einschließen}}, {{tt+|de|umströmen}}
 * Greek: {{t-needed|el}}
 *: Ancient: {{t-needed|grc}}
 {{trans-mid}}
-* Italian: {{t|it|[[trasformare]] [[in]] [[un]] [[isola]]}}
+* Italian: {{tt|it|[[trasformare]] [[in]] [[un]] [[isola]]}}
 * Norwegian:
 *: Bokmål: {{t-needed|nb}}
 *: Nynorsk: {{t-needed|nn}}
-* Portuguese: {{t+|pt|ilhar}}
+* Portuguese: {{tt+|pt|ilhar}}
 {{trans-bottom}}
 
 {{trans-top|set, dot (as if) with islands}}
-* Finnish: {{t|fi|[[koristella]] [[saari]]lla|lit=decorate with islands}}
-* German: {{t+|de|beflecken}}, {{t|de|mit Inseln [[versehen]]}}
+* Finnish: {{tt|fi|[[koristella]] [[saari]]lla|lit=decorate with islands}}
+* German: {{tt+|de|beflecken}}, {{tt|de|mit Inseln [[versehen]]}}
 * Greek:
 *: Ancient: {{t-needed|grc}}
 * Italian: {{t-needed|it}}
@@ -488,24 +491,25 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 * Norwegian:
 *: Bokmål: {{t-needed|nb}}
 *: Nynorsk: {{t-needed|nn}}
-* Russian: {{t+|ru|покрыва́ть|impf}}, {{t+|ru|покры́ть|pf}} (''островками''), {{t+|ru|усе́ивать|impf}}, {{t+|ru|усе́ять|pf}} (''островками'')
+* Russian: {{tt+|ru|покрыва́ть|impf}}, {{tt+|ru|покры́ть|pf}} (''островками''), {{tt+|ru|усе́ивать|impf}}, {{tt+|ru|усе́ять|pf}} (''островками'')
 {{trans-bottom}}
 
 {{trans-top|isolate}}
-* Bulgarian: {{t+|bg|изолирам}}
-* Dutch: {{t+|nl|afsluiten}}, {{t+|nl|afzonderen}}, {{t+|nl|isoleren}}
-* Finnish: {{t+|fi|eristää}}
-* German: {{t+|de|vereinzeln}}, {{t+|de|isolieren}}
-* Greek: {{t+|el|απομονώνω|sc=Grek}}
+* Bulgarian: {{tt+|bg|изолирам}}
+* Dutch: {{tt+|nl|afsluiten}}, {{tt+|nl|afzonderen}}, {{tt+|nl|isoleren}}
+* Finnish: {{tt+|fi|eristää}}
+* German: {{tt+|de|vereinzeln}}, {{tt+|de|isolieren}}
+* Greek: {{tt+|el|απομονώνω|sc=Grek}}
 *: Ancient: {{t-needed|grc}}
-* Italian: {{t+|it|isolare}}
+* Italian: {{tt+|it|isolare}}
 {{trans-mid}}
 * Norwegian:
 *: Bokmål: {{t-needed|nb}}
 *: Nynorsk: {{t-needed|nn}}
-* Portuguese: {{t+|pt|isolar}}
-* Russian: {{t+|ru|изоли́ровать}}, {{t+|ru|отделя́ть|impf}}, {{t+|ru|отдели́ть|pf}}, {{t+|ru|обособля́ть|impf}}, {{t+|ru|обосо́бить|pf}}
-* Sicilian: {{t|scn|isulari}}
+* Portuguese: {{tt+|pt|isolar}}
+* Russian: {{tt+|ru|изоли́ровать}}, {{tt+|ru|отделя́ть|impf}}, {{tt+|ru|отдели́ть|pf}}, {{tt+|ru|обособля́ть|impf}}, {{tt+|ru|обосо́бить|pf}}
+* Sicilian: {{tt|scn|isulari}}
+}}<!-- close {{multitrans}} -->
 {{trans-bottom}}
 
 ===See also===
