--- a/en/b/BX.4329.wikitext
+++ b/en/b/BX.4329.wikitext
@@ -17,7 +17,7 @@
 # {{ISO 3166|1|2|inr=1|Benelux Office for Intellectual Property}}
 
 =====Usage notes=====
-{{ISO 3166/inr|1949=1|the {{w|World Intellectual Property Organization}}|the {{w|WIPO ST.3}} standard}}
+{{ISO 3166/inr|the {{w|World Intellectual Property Organization}}|the {{w|WIPO ST.3}} standard}}
 
 ----
 
