--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -7,6 +7,7 @@
 {{mul-symbol}}
 
 # {{ISO 3166|1|2|Democratic Republic of the Congo}}
+#: {{syn|mul|ZR|qq1=1974{{ndash}}1997, as {{w|Zaire}}}}
 
 ===Etymology 2===
 
