--- a/en/f/FM.26231.wikitext
+++ b/en/f/FM.26231.wikitext
@@ -4,7 +4,7 @@
 ===Symbol===
 {{mul-symbol}}
 
-# {{ISO 3166|1|2|Federated States of Micronesia}}
+# {{ISO 3166|1|2|Federated States of Micronesia|from=1986}}
 
 ----
 
