--- a/en/f/FM.26231.wikitext
+++ b/en/f/FM.26231.wikitext
@@ -5,6 +5,7 @@
 {{mul-symbol}}
 
 # {{ISO 3166|1|2|Federated States of Micronesia|from=1986}}
+#: {{syn|mul|FSM|qq1={{w|ISO 3166-1 alpha-3|alpha-3}}}}
 
 ----
 
