--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -7,7 +7,7 @@
 {{mul-symbol}}
 
 # {{ISO 3166|1|2|Democratic Republic of the Congo|from=1997}}
-#: {{syn|mul|COD|qq1={{w|ISO 3166-1 alpha-3|alpha-3}}|ZR|qq2=1974{{ndash}}1997, as {{w|Zaire}}}}
+#: {{syn|mul|COD|qq1={{w|ISO 3166-1 alpha-3|alpha-3}} 1997{{ndash}}present|ZR|qq2=1974{{ndash}}1997, as {{w|Zaire}}}}
 
 ===Etymology 2===
 
