--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -48,6 +48,7 @@ Abbreviation of various terms and phrases.
 # {{initialism of|en|cross-dresser}}
 # {{lb|en|chemistry|physics}} {{initialism of|en|circular dichroism}}
 # {{lb|en|immunology|biochemistry}} {{initialism of|en|cluster of differentiation}}
+# {{lb|en|video games}} {{abbreviation of|en|cooldown}}
 
 ====Derived terms====
 * {{sense|corps diplomatique}} {{l|en|CD plate}}
