--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -448,7 +448,7 @@ Chiefly used in the phrase "don't @ me"/"don't at me". It can be used humorously
 From {{inh|az|trk-pro|*at|t=horse}}.<ref>{{R:trk-pro:SDM|*ăt|855}}</ref>
 
 ====Noun====
-{{az-head-noun|a|c}}
+{{az-noun}}
 
 # [[horse]] {{c|az|Horses}}
 # {{lb|az|chess}} [[knight]]
