--- a/en/c/CFC.26242.wikitext
+++ b/en/c/CFC.26242.wikitext
@@ -14,7 +14,7 @@
 ===Noun===
 {{en-noun}}
 
-# {{lb|en|organic chemistry}} {{initialism of|en|chlorofluorocarbon|nodot=1}}, a class of [[molecule]]s containing [[chlorine]], [[fluorine]] and [[carbon]] [[atom]]s
+# {{lb|en|organic chemistry}} {{initialism of|en|chlorofluorocarbon|nodot=1}}, a class of [[molecule]]s containing [[chlorine]], [[fluorine]] and [[carbon]] [[atom]]s [[Category:en:Fluorine]]
 
 ====Related terms====
 {{sense|chlorofluorocarbon}}
