t+br:[[bambouz]] ([[WT:EDIT|Assisted]]) <bamboo#67259771>

--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -67,6 +67,7 @@
 * Belarusian: {{t|be|бамбу́к|m}}
 * Bengali: {{t+|bn|বাঁশ}}
 * Bikol Central: {{t+|bcl|butong}}
+* Breton: {{t+|br|bambouz|f}}
 * Bulgarian: {{t+|bg|бамбу́к|m}}
 * Burmese: {{t+|my|ဝါး}}
 * Catalan: {{t+|ca|bambú|m}}
