--- a/en/m/mini.34065.wikitext
+++ b/en/m/mini.34065.wikitext
@@ -29,6 +29,8 @@ Abbrevations.
 # {{lb|en|dated}} ''Clipped form of'' [[minicomputer]].
 #* '''1975''', June 25, ''Computerworld'' (page 20)
 #*: Micros will move upwards to where they have the same power and speed as today's '''minis'''.
+# ''Clipped form of'' [[miniature]], a all [[figurine]] of a character used for a gallery or a [[tabletop]] game.
+#*: Don't forget to paint your '''minis''' correctly.
 
 =====Related terms=====
 * {{l|en|mini-}}
