<four score and seven years ago#67296436>

--- a/en/f/four score and seven years ago.803552.wikitext
+++ b/en/f/four score and seven years ago.803552.wikitext
@@ -19,6 +19,7 @@
 #* {{quote-book|en|author=Vicky DeCoster|date=20 February 2012|chapter=The Letter|title=The Wacky World of Womanhood|page=93|isbn=9781468900453|url=https://www.google.com/books/edition/The_Wacky_World_of_Womanhood/jUXXMexWbLIC|passage='''Four score and seven years ago''', I began writing an annual letter to be enclosed in my Christmas cards.}}
 
 ====Alternative forms====
+* {{l|en|fourscore and seven years ago}}
 * {{l|en|four score seven years ago}}
 
 ====Translations====
