t+ga:[[bolgán]] ([[WT:EDIT|Assisted]]) <bubble#67301638>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -137,7 +137,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 * Ido: {{t+|io|bulo}}
 * Indonesian: {{t+|id|buih}}
 * Interlingua: {{t|ia|bulla}}
-* Irish: {{t|ga|boilgeog|f}}
+* Irish: {{t|ga|boilgeog|f}}, {{t|ga|bolgán|m}}
 * Italian: {{t+|it|bolla|f}}
 * Japanese: {{t+|ja|泡|tr=あわ, awa|sc=Jpan}}, {{t+|ja|泡立つ|tr=あわだつ, awadatsu|sc=Jpan}}
 * Kannada: {{t+|kn|ಮರಳು|sc=Knda}}
