--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -9,7 +9,7 @@
 * {{rhymes|en|ɪn|s=1}}
 
 ===Etymology 1===
-From {{inh|en|enm|chyn}}, from {{inh|en|ang|ang|ċinn||chin}}, from {{inh|en|gem-pro|*kinnuz||chin}}, from {{inh|en|ine-pro|*ǵénus||chin, jaw}}. Compare West Frisian/Dutch {{m|nl|kin}}, Low German/German {{m|de|Kinn}}, {{cog|da|kind}}, {{cog|is|kinn}}, {{cog|cy|gen}}, {{cog|la|gena}}, {{cog|xto|śanwem}}, {{cog|grc|sc=polytonic|γένυς||jaw}}, {{cog|hy|ծնոտ|sc=Armn}}, {{cog|fa|چانه|tr=čâne|sc=fa-Arab}}, {{cog|sa|हनु|tr=hánu}}. {{doublet|en|gena}}.
+From {{inh|en|enm|chyn}}, from {{inh|en|ang|ċinn||chin}}, from {{inh|en|gem-pro|*kinnuz||chin}}, from {{inh|en|ine-pro|*ǵénus||chin, jaw}}. Compare West Frisian/Dutch {{m|nl|kin}}, Low German/German {{m|de|Kinn}}, {{cog|da|kind}}, {{cog|is|kinn}}, {{cog|cy|gen}}, {{cog|la|gena}}, {{cog|xto|śanwem}}, {{cog|grc|sc=polytonic|γένυς||jaw}}, {{cog|hy|ծնոտ|sc=Armn}}, {{cog|fa|چانه|tr=čâne|sc=fa-Arab}}, {{cog|sa|हनु|tr=hánu}}. {{doublet|en|gena}}.
 
 ====Noun====
 {{en-noun}}
