t+fa:[[بس‌شماری]] ([[WT:EDIT|Assisted]]) <multiplication#67312238>

--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -84,7 +84,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 *: Bokmål: {{t+|nb|multiplikasjon|m}}
 *: Nynorsk: {{t|nn|multiplikasjon|m}}
 * Pashto: {{t+|ps|ضرب|m|tr=zarb}}
-* Persian: {{t+|fa|ضرب|tr=zarb}}
+* Persian: {{t+|fa|ضرب|tr=zarb}}, {{t|fa|بس‌شماری|tr=basšomārī}}
 * Polish: {{t+|pl|mnożenie|n}}
 * Portuguese: {{t+|pt|multiplicação|f}}
 * Romanian: {{t+|ro|multiplicare|f}}, {{t+|ro|înmulțire|f}}, {{t+|ro|multiplicație|f}}
