t+kgp:[[nhinsu]] ([[WT:EDIT|Assisted]]) <rabbit#67320438>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -154,6 +154,7 @@ Related forms include {{cog|frm|rabouillet|t=baby rabbit}} and in {{cog|fr|rabot
 * Irish: {{t+|ga|coinín|m}}
 * Italian: {{t+|it|coniglio|m}}
 * Japanese: {{t+|ja|兎|tr=うさぎ, usagi|sc=Jpan}}, {{t+|ja|ウサギ|tr=usagi|sc=Jpan}}
+* Kaingang: {{t|kgp|nhinsu}}
 * Kala Lagaw Ya: {{t-needed|mwp}}
 * Kannada: {{t+|kn|ಮೊಲ|sc=Knda}}
 * Kashubian: {{t|csb|trus}}
