t+fi:[[tarkoite]] t-balance ([[WT:EDIT|Assisted]]) <thing#67322904>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -317,11 +317,11 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 
 {{trans-top|word, symbol, sign, or other referent that can be used to refer to any entity}}
 * Bulgarian: {{t+|bg|нещо}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t+|fi|tarkoite}}
 * French: {{t-needed|fr}}
 * Hungarian: {{t+|hu|ez-az}}, {{t|hu|egy s más}}
-* Indonesian: {{t+|id|sesuatu}}
 {{trans-mid}}
+* Indonesian: {{t+|id|sesuatu}}
 * Polish: {{t+|pl|coś|n}}
 {{trans-bottom}}
 
