--- a/en/w/Wembley.803277.wikitext
+++ b/en/w/Wembley.803277.wikitext
@@ -7,6 +7,7 @@ Derived from the {{der|en|ang|-}} proper name {{m|ang|Wemba}} and {{m|ang|lēah|
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|en|/wɛmbli/}}
+* {{audio|en|LL-Q1860 (eng)-Vealhurl-Wembley.wav|Audio (Berkshire, UK)}}
 
 ===Proper noun===
 {{wikipedia|Wembley Stadium}}
