/* Pronunciation */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <skyhook#67325296>

--- a/en/s/skyhook.801551.wikitext
+++ b/en/s/skyhook.801551.wikitext
@@ -5,6 +5,7 @@
 
 ===Pronunciation===
 * {{IPA|en|/ˈskaɪˌhʊk/}}
+* {{audio|en|LL-Q1860 (eng)-Vealhurl-skyhook.wav|Audio (Berkshire, UK)}}
 
 ===Noun===
 {{wikipedia}}
