--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -5,7 +5,7 @@
 {{root|en|ine-pro|*bʰendʰ-}}
 From {{inh|en|enm|binden}}, from {{inh|en|ang|bindan}}, from {{inh|en|gmw-pro|*bindan}}, from {{inh|en|gem-pro|*bindaną}} (compare {{cog|fy|bine}}, {{cog|nl|binden}}, {{cog|nds|binnen}}, {{cog|de|binden}}, {{cog|da|binde}}), from {{inh|en|ine-pro||*bʰéndʰ-e-ti}}, from {{m|ine-pro|*bʰendʰ-||to tie}}.
 
-Compare {{cog|cy|benn||cart}}, {{cog|la|offendīx||knot, band}}, {{cog|lt|beñdras||partner}}, {{cog|sq|bend||servant, henchman}}, {{cog|grc|πεῖσμα||cable, rope}}, {{cog|fa|بستن|tr=bastan|t=to bind}}, {{cog|sa|बन्धति|tr=bándhati}}. {{doublet|en|bandana}}.
+Compare {{cog|cy|benn||cart}}, {{cog|la|offendīx||knot, band}}, {{cog|lt|beñdras||partner}}, {{cog|sq|bind||to convince, to awe, to spell}}, {{cog|grc|πεῖσμα||cable, rope}}, {{cog|fa|بستن|tr=bastan|t=to bind}}, {{cog|sa|बन्धति|tr=bándhati}}. {{doublet|en|bandana}}.
 
 ===Pronunciation===
 * {{IPA|en|/baɪnd/}}
