--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -82,6 +82,7 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 * Antillean Creole: {{tt|gcf|zil}}
 * Arabic: {{tt|ar|جَزِيرَة|f}}
 *: Egyptian Arabic: {{tt|arz|جزيرة|f|tr=gezīra|sc=Arab}}
+*: Hijazi Arabic: {{t|acw|جزيرة|f|tr=jazīra}}
 * Aragonese: {{tt|an|isla|f}}
 * Aramaic:
 *: Syriac: {{tt|arc|ܓܙܪܬܐ|f|tr=gāzartā’|sc=Syrc}}
