--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -1458,7 +1458,7 @@ Variant of {{inh|cy|owl|ad}} (alongside the now-obsolete {{m|cy|add}}), from {{i
 From {{inh|yol|enm|that}}, from {{inh|yol|ang|þæt}}, from {{inh|yol|gem-pro|*þat}}.
 
 ====Alternative forms====
-* {{alter|yol|et|thet|that}}
+* {{alter|yol|et|th'|thet|that}}
 
 ====Conjunction====
 {{head|yol|conjunction}}
