t+es:[[logrero]] t+es:[[logrera]] ([[WT:EDIT|Assisted]]) <moneylender#67343326>

--- a/en/m/moneylender.720245.wikitext
+++ b/en/m/moneylender.720245.wikitext
@@ -24,7 +24,7 @@
 * Portuguese: {{t+|pt|agiota|m|f}}
 * Romanian: {{t+|ro|cămătar|m}}, {{t+|ro|uzurar|m}}, {{t|ro|uzurară|f}}
 * Russian: {{t+|ru|ростовщи́к|m}}
-* Spanish: {{t|es|prestamista|m|f}}
+* Spanish: {{t|es|prestamista|m|f}}, {{t+|es|logrero|m}}, {{t+|es|logrera|f}}
 * Tibetan: {{t|bo|དངུལ་བུན་གཏོང་མཁན}}
 * Turkish: {{t+|tr|tefeci}}
 {{trans-bottom}}
