/* Derived terms */ add entry <squirrel#67343822>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -34,6 +34,7 @@ Displaced native {{noncog|enm|acquerne}}, {{m|enm|aquerne}}, from {{noncog|ang|Ä
 * {{l|en|purple squirrel}}
 * {{l|en|red squirrel}}
 * {{l|en|squirrel friend}}
+* {{l|en|squirrelly}}
 
 ====Translations====
 {{trans-top|rodent}}
