/* Translations */added Irish <rot#67350678>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -75,6 +75,7 @@ From {{inh|en|enm|roten}}, {{m|enm|rotten}}, from {{inh|en|ang|rotian||to rot, b
 *: Ancient: {{t|grc|[[σήπω|σήπομαι]]}}
 * Hebrew: {{t|he|נרקב|m|tr=nirkáv}}
 * Hungarian: {{t+|hu|rohad}}, {{t+|hu|rothad}}
+* Irish: {{t|ga|lobh}}
 * Italian: {{t+|it|marcire}}, {{t|it|putrefarsi}}
 * Japanese: {{t+|ja|腐る|tr=くさる, kusaru|sc=Jpan}}
 * Khmer: {{t+|km|រលួយ|tr=rɔluəy|sc=Khmr}}
