t+nl:[[wegcode]] ([[WT:EDIT|Assisted]]) <rules of the road#67355858>

--- a/en/r/rules of the road.801538.wikitext
+++ b/en/r/rules of the road.801538.wikitext
@@ -19,6 +19,7 @@
 ====Translations====
 {{trans-top|rules and regulations}}
 * Czech: {{t|cs|pravidla silničního provozu|n-p}}
+* Dutch: {{t+|nl|wegcode|m}}
 * Finnish: {{t|fi|liikennesäännöt}}
 * French: {{t+|fr|code de la route|m}}
 {{trans-mid}}
