t+ja:[[イェー]] ([[WT:EDIT|Assisted]]) <yeah#67356244>

--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -89,7 +89,7 @@ Colloquial form of {{m|en|yea}} or {{m|en|yes}}. Compare {{m|en|nah}}
 * French: {{t+|fr|ouais}}
 * Italian: {{t+|it|sì}}, {{t+|it|vai}}, {{t+|it|evvai}}, {{t|it|evviva}}
 {{trans-mid}}
-* Japanese: {{t|ja|やった|tr=yatta}}
+* Japanese: {{t|ja|やった|tr=yatta}}, {{t|ja|イェー}} {{qualifier|slang}}
 * Portuguese: {{t+|pt|é!}}, {{t|pt|isso aí!}}
 * Russian: {{t+|ru|да!}}, {{t+|ru|ура́!}}, {{t|ru|э-ге́й!}}, {{t+|ru|е!}} {{qualifier|slang}}
 * Sicilian: {{t|scn|forza ḍḍocu!}}
