--- a/en/o/owre.720028.wikitext
+++ b/en/o/owre.720028.wikitext
@@ -33,3 +33,15 @@ Obsolete forms.
 
 # [[over|Over]].
 #* {{quote-book|sco|author=Robert Burns|authorlink=Robert Burns|chapter=On a Scotch Bard Gone to the West Indies|title=[[w:Kilmarnock volume|Poems, Chiefly in the Scottish Dialect]]|location=Kilmarnock, East Ayrshire|publisher=Printed by John Wilson|date=31 July 1786|oclc=922031953|newversion=reprinted|location2=Kilmarnock|publisher2=James McKie|year2=March 1867|page2=184|pageurl2=https://archive.org/stream/poemschieflyinsc00burnuoft#page/184/mode/1up/|oclc2=367976637|passage=Fareweel, my ''rhyme-compoſing billie''! / Your native ſoil was right ill-willie; / But may ye flouriſh like a lily, / Now bonilie! / I'll toaſt ye in my hindmoſt ''gillie'', / Tho' '''owre''' the Sea!}}
+
+----
+==Yola==
+
+===Determiner===
+{{head|yol|determiner}}
+
+# {{alt form|yol|oor}}
+#* {{quote-book|yol|year=1867|line=9|title=CONGRATULATORY ADDRESS IN THE DIALECT OF FORTH AND BARGY|passage='''Owre''' generale hopes.|translation='''Our''' commmon hopes.}}
+ 
+===References===
+* {{R:Poole 1867|page=116}}
