--- a/en/r/rules of the road.801538.wikitext
+++ b/en/r/rules of the road.801538.wikitext
@@ -26,6 +26,6 @@
 * German: {{t|de|Straßenverkehrsregeln|f-p}}, {{t+|de|Verkehrsregeln |f-p}}, {{t|de|Straßenverkehrsvorschriften|f-p}}, {{t|de|Verkehrsvorschriften|f-p}}, {{t|de|Straßenverkehrsgesetz|n}}
 * Hebrew: {{t+|he|חֻקֵּי הַדֶּרֶךְ|m-p|tr=khukey haderekh}}
 * Hungarian: {{t+|hu|KRESZ}}
-* Polish: {{t-needed|pl}}
+* Polish: {{t+|pl|kodeks drogowy|m}}
 * Russian: {{t|ru|пра́вила доро́жного движе́ния|n-p}}
 {{trans-bottom}}
