--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -1484,3 +1484,4 @@ From {{inh|yol|enm|eten}}, from {{inh|yol|ang|etan|}}, from {{inh|yol|gmw-pro|*e
 
 ===References===
 * {{R:Poole 1867|page=23}}
+* {{R:Browne 1927|page=129}}
