--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -71,6 +71,6 @@
 
 ===Further reading===
 * {{pedia|West Frisian language}}
-* {{ISO 639|1code=fy|3code=fry}}
+* {{ISO 639|fy|fry}}
 
 [[Category:en:Languages]]
