--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -10,7 +10,7 @@
 ===Proper noun===
 {{en-proper noun|head=[[west|West]] [[Frisian]]}}
 
-# A language spoken mostly in the province of [[Friesland]], in the north of the Netherlands; [[West Lauwers Frisian]], one of the three West Frisian languages (or language varieties).
+# A language spoken mostly in the province of [[Friesland]], in the north of the Netherlands; [[West Lauwers Frisian]], one of the three West Frisian languages (or language varieties).{{rfv-sense|en}}
 # {{lb|en|in the Netherlands}} A [[Dutch]] [[dialect]] spoken in [[West Friesland]] in the province of [[North Holland]], historically influenced by [[Frisian]].
 
 ====Usage notes====
