/* English */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <incommodious#67390717>

--- a/en/i/incommodious.741073.wikitext
+++ b/en/i/incommodious.741073.wikitext
@@ -7,8 +7,7 @@
 {{en-adj}}
 
 # {{lb|en|of a place occupied by people}} [[uncomfortable|Uncomfortable]] or [[inhospitable]], especially due to being [[cramped]].
-#* '''1859''', [[w:Charles Dickens|Charles Dickens]], ''A Tale of Two Cities'', ch. 7:
-#*: Tellson's Bank by Temple Bar . . . was very small, very dark, very ugly, very '''incommodious'''.
+#* {{RQ:Dickens Tale of Two Cities|passage=Tellson's Bank by Temple Bar . . . was very small, very dark, very ugly, very '''incommodious'''.|chapter=7}}
 #* '''1909''', [[w:Henry James|Henry James]], "Venice" in ''Italian Hours'':
 #*: The place is small and '''incommodious''', the pictures are out of sight and ill-lighted, the custodian is rapacious, the visitors are mutually intolerable, but the shabby little chapel is a palace of art.
 #* '''2010''' June 15, Katherine Knorr, "[http://www.nytimes.com/2010/06/16/arts/16iht-dynasty.html Contemplating Art, and Its Sideshow]," ''New York Times'' <small>(retrieved 19 July 2012)</small>:
@@ -20,6 +19,10 @@
 #*: "What a silly you must be!" a comment which Tommy followed up by seizing Dinah with both arms, and dancing along by her side with '''incommodious''' fondness.
 #* '''1865''', [[w:Charles Darwin|Charles Darwin]], ''The Movement and Habits of Climbing Plants'', ch. 1:
 #*: A dense whorl of many leaves would apparently be '''incommodious''' for a twining plant.
+
+====Derived terms====
+* {{l|en|incommodiously}}
+* {{l|en|incommodiousness}}
 
 ====Translations====
 {{trans-top|[[discomfort|Discomforting]], [[inconvenient]], or [[unsuitable]]}}
